@@ -327,17 +327,22 @@
 <context>
     <name>iconViewModeDelegate</name>
     <message>
-        <location filename="../../src/iconViewModeDelegate.cpp" line="328"/>
+        <location filename="../../src/iconViewModeDelegate.cpp" line="260"/>
+        <source>[picture]</source>
+        <translation type="unfinished">[པར་རིས]།</translation>
+    </message>
+    <message>
+        <location filename="../../src/iconViewModeDelegate.cpp" line="332"/>
         <source>Welcome to use Notes.</source>
         <translation>ཟིན་བྲིས་སྤྱོད་རྒྱུར་དགའ་བསུ་ཞུ་རྒྱུ་ཡིན།</translation>
     </message>
     <message>
-        <location filename="../../src/iconViewModeDelegate.cpp" line="357"/>
+        <location filename="../../src/iconViewModeDelegate.cpp" line="361"/>
         <source>Today  </source>
         <translation>དེ་རིང་།  </translation>
     </message>
     <message>
-        <location filename="../../src/iconViewModeDelegate.cpp" line="366"/>
+        <location filename="../../src/iconViewModeDelegate.cpp" line="370"/>
         <source>Yesterday  </source>
         <translation>ཁ་སང་།  </translation>
     </message>
