@@ -314,17 +314,22 @@
 <context>
     <name>iconViewModeDelegate</name>
     <message>
-        <location filename="../../src/iconViewModeDelegate.cpp" line="328"/>
+        <location filename="../../src/iconViewModeDelegate.cpp" line="260"/>
+        <source>[picture]</source>
+        <translation type="unfinished">[Сүрөт]</translation>
+    </message>
+    <message>
+        <location filename="../../src/iconViewModeDelegate.cpp" line="332"/>
         <source>Welcome to use Notes.</source>
         <translation>Ноталарды колдонууга кош келиңиздер.</translation>
     </message>
     <message>
-        <location filename="../../src/iconViewModeDelegate.cpp" line="357"/>
+        <location filename="../../src/iconViewModeDelegate.cpp" line="361"/>
         <source>Today  </source>
         <translation>Бүгүн  </translation>
     </message>
     <message>
-        <location filename="../../src/iconViewModeDelegate.cpp" line="366"/>
+        <location filename="../../src/iconViewModeDelegate.cpp" line="370"/>
         <source>Yesterday  </source>
         <translation>Кеше  </translation>
     </message>
